# bcdi

./: .deepsource.toml  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.rst  MANIFEST.in  PyPI.md  README.rst  conda_environment.yml  conda_requirements.txt  dodo.py  environment.yml  index.rst  mypy.ini  pip_requirements.txt  pyproject.toml  readthedocs.yml  requirements.txt  setup.py  test.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: codeql-analysis.yml  pr_lint_test.yml  python-package-3.10.yml  python-package-3.11.yml  python-package-3.6.yml  python-package-3.7.yml  python-package-3.8.yml  python-package-3.9.yml  python-package-conda-3.8.yml  python-package-conda-3.9.yml  python-package-conda.yml  python-package.yml
bcdi/: __init__.py  constants.py  context.py
bcdi/algorithms/: __init__.py  algorithms_utils.py
bcdi/examples/: ID27_config_preprocessing_cdi.yml  S11_config_postprocessing.yml  S11_config_preprocessing.yml  S22_config_preprocessing_cdi.yml  __init__.py  config_postprocessing.yml  config_preprocessing.yml  config_preprocessing_cdi.yml
bcdi/experiment/: __init__.py  beamline.py  beamline_factory.py  dataset.py  detector.py  diffractometer.py  experiment_utils.py  loader.py  rotation_matrix.py  setup.py
bcdi/facet_recognition/: __init__.py  facet_utils.py
bcdi/graph/: __init__.py  colormap.py  graph_utils.py  linecut.py  turbo_colormap.py
bcdi/postprocessing/: __init__.py  analysis.py  facet_analysis.py  facet_recognition.py  postprocessing_runner.py  postprocessing_utils.py  process_scan.py  raw_orthogonalization.py
bcdi/preprocessing/: ReadNxs3.py  __init__.py  alias_dict.txt  alias_dict_2018.txt  alias_dict_2019.txt  alias_dict_2020.txt  alias_dict_2021.txt  alias_dict_2022.txt  analysis.py  bcdi_utils.py  cdi_utils.py  center_fft.py  maskMaker.py  nxsReady.py  plot3Dsynced.py  prepare_cdi_mask.py  preprocessing_runner.py  preprocessing_utils.py  process_scan.py  process_scan_cdi.py  supportMaker.py  tomography_utils.py
bcdi/simulation/: __init__.py  simulation_utils.py  supportMaker.py
bcdi/test/: test_utils.py  tests.py  tests_graph_utils.py  tests_validation.py
bcdi/tests/: context.py  test_graph_utils.py  test_utilities.py  test_utils.py  test_validation.py
bcdi/utils/: __init__.py  constants.py  format.py  image_registration.py  io_helper.py  parameters.py  parser.py  snippets_logging.py  text.py  utilities.py  validation.py
bcdi/xcca/: __init__.py  xcca_utils.py
bcdiHackweek/: mkdocs.yml
bcdiHackweek/docs/: index.md
conf/: config_postprocessing.yml  config_preprocessing.yml  default_config.yml  nested_default_config.yml
doc/: EXAMPLE_POSTPROCESSING.rst  EXAMPLE_PREPROCESSING.rst  HISTORY.rst  Makefile  conf.py  index.rst  make.bat  requirements.txt
doc/example/: EXAMPLE_POSTPROCESSING.rst  EXAMPLE_PREPROCESSING.rst  S11_config_postprocessing.yml  S11_config_preprocessing.yml
doc/modules/: index.rst
doc/scripts/: index.rst
scripts/: parser.py
scripts/algorithms/: bcdi_blurring_function.py  bcdi_flatten_intensity.py
scripts/experiment/: bcdi_ccd_calib.py  bcdi_ccd_calib_cristal.py  bcdi_ccd_calib_sixs.py
scripts/facet_recognition/: bcdi_facet_strain.py  bcdi_polarplot.py
scripts/graph/: bcdi_3D_object_movie.py  bcdi_linecut_diffpattern.py  bcdi_merge_3D_qspace.py  bcdi_scan_analysis.py  bcdi_scan_movie.py  bcdi_view_ccf.py  (+4 more)
tests/: config.py
(+317 files in other folders)
